--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.4.1",
     "@mui/x-data-grid": "^5.5.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "crypto-js": "^4.2.0",
     "fetch-jsonp": "^1.2.1",
+    "filesize": "^10.1.1",
+    "fs": "^0.0.1-security",
     "js-sha256": "^0.9.0",
-    "pako": "^2.1.0",
     "native-file-system-adapter": "^3.0.0",
+    "pako": "^2.1.0",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
@@ -26,9 +32,12 @@
     "react-icons": "^4.3.1",
     "react-native-mime-types": "^2.3.0",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^8.0.3",
+    "react-wavify": "^1.10.0",
     "recoil": "^0.6.1",
     "url-join": "^5.0.0",
+    "water-animation-2d": "^0.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -58,6 +67,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.x.x",
     "gh-pages": "^3.2.3"
   },
   "homepage": "https://disboxapp.github.io/web/"
