--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,42 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node.js dependencies
+node_modules
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Logs
+logs
+.log
+npm-debug.log
+yarn-debug.log
+yarn-error.log
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+# Operating system files
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+Thumbs.db
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# IDEs and editors
+.vscode
+.idea
+
+# Build and temp directories
+dist
+build
+coverage
+
+# Environment variables
+.env
+.env.local
+.env..local
+
+# Package distribution
+.tgz
+.zip
+.tar.gz
+
+# npm package manager lock file (if you prefer not to commit)
+package-lock.json
+yarn.lock
+
+# Optional files for specific environments (can be addedremoved as needed)
+.bak
+.swp
+
+disbox.db
